objects/nDESIGN__Screen__c.object
<CustomObject>
    <fields>
        <fullName>nDESIGN__Disable_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Show_Link_To_Context_Object__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set then a link will be displayed to go back to the context object</description>
        <label>Show Context Object Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__lookupKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Screen</label>
    <listViews>
        <fullName>nDESIGN__All</fullName>
        <columns>NAME</columns>
        <columns>nDESIGN__Show_Link_To_Context_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>